@@ -313,6 +313,10 @@ repl call, 0x4212E7,	0x422847,	0x421367,	"City_get_improv_maintenance_for_ui",		
 define,	   0x563473,	0x0,		0x0,		"ADDR_CAPTURE_CITY_BARB_BRANCH",		"byte *"
 define,	   0x56082B,	0x5607DB,	0x56C938,	"ADDR_PROD_PHASE_BARB_DONE_NO_SPAWN_JUMP",	"byte *"
 define,	   0x560838,	0x5607E8,	0x56C945,	"ADDR_PROD_PHASE_BARB_DONE_JUMP",		"byte *"
+define,	   0x426C00,	0x428340,	0x426C80,	"Map_wrap_horiz",				"int (__fastcall *) (Map * this, int edx, int x)"
+define,	   0x426C40,	0x428380,	0x426CC0,	"Map_wrap_vert",				"int (__fastcall *) (Map * this, int edx, int y)"
+repl call, 0x44FEC3,	0x451F64,	0x44FF43,	"neighbor_index_to_diff_for_barb_ai",		""
+repl call, 0x44FEF0,	0x451F91,	0x44FF70,	"Map_wrap_vert_for_barb_ai",			""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
