@@ -108,6 +108,7 @@ patch_houseboat_bug = true
 patch_intercept_lost_turn_bug = true
 patch_phantom_resource_bug = true
 patch_maintenance_persisting_for_obsolete_buildings = true
+patch_barbarian_diagonal_bug = true
 
 [=========================]
 [=== ENGINE EXTENSIONS ===]
